--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.data.mongodb.database=chatbot
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 logging.level.=INFO
+logging.level.org.glassfish.jersey.rest=DEBUG
